zigdata/examples/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: tls-certs
            mountPath: "/tls"
            readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: zigdata-org-tls
